@@ -1,3 +1,5 @@
+* Deactivate attachment button when record is not created
+
 Version 2.4.0 - 2012-04-23
 * Bug fixes (see mercurial logs for details)
 * Remove workflow
